--- a/Lab2_CV.ipynb
+++ b/Lab2_CV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,13 +10,13 @@
     "import cv2\n",
     "import time\n",
     "\n",
-    "MIN_MATCH_COUNT = 20  #мінімальна кількість спільних ознак яка потрібна для розпізнавання об'єкта\n",
+    "MIN_MATCH_COUNT = 20  #мінімальна кількість спільних ознак, яка потрібна для розпізнавання об'єкта\n",
     "QUERY_IMAGE = \"main.jpg\" #Об'єкт, який потрібно розпізнати"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -26,108 +26,108 @@
      "output_type": "stream",
      "text": [
       "image\t1 metric\t2 metric\t3 metric\tgood matches\n",
-      "1:\t0.7021\t\t0.2128\t\t96.34\t\t47\n",
-      "2:\t0.6897\t\t0.2109\t\t123.36\t\t29\n",
-      "3:\t0.7358\t\t0.1877\t\t119.533\t\t53\n",
-      "4:\t0.5405\t\t0.1727\t\t119.505\t\t37\n",
-      "5:\t0.625\t\t0.2168\t\t111.792\t\t40\n",
-      "6:\t0.3182\t\t0.2443\t\t123.387\t\t22\n",
-      "7:\t0.6452\t\t0.2072\t\t331.546\t\t31\n",
-      "8:\t0.7576\t\t0.1993\t\t312.258\t\t33\n",
-      "9:\t0.7143\t\t0.1661\t\t329.605\t\t49\n",
-      "10:\t0.6341\t\t0.1953\t\t221.661\t\t41\n",
-      "11:\t0.7297\t\t0.1748\t\t231.3\t\t74\n",
-      "12:\t0.7581\t\t0.1782\t\t208.171\t\t62\n",
-      "13:\t0.44\t\t0.2104\t\t385.504\t\t25\n",
-      "14:\t0.5909\t\t0.207\t\t225.514\t\t44\n",
-      "15:\t0.8372\t\t0.1771\t\t510.768\t\t43\n",
-      "16:\t0.6923\t\t0.2157\t\t302.616\t\t26\n",
+      "1:\t0.7021\t\t0.2128\t\t0.432\t\t47\n",
+      "2:\t0.6897\t\t0.2109\t\t0.501\t\t29\n",
+      "3:\t0.7358\t\t0.1877\t\t0.424\t\t53\n",
+      "4:\t0.5405\t\t0.1727\t\t0.463\t\t37\n",
+      "5:\t0.625\t\t0.2168\t\t0.447\t\t40\n",
+      "6:\t0.3182\t\t0.2443\t\t0.447\t\t22\n",
+      "7:\t0.6452\t\t0.2072\t\t0.32\t\t31\n",
+      "8:\t0.7576\t\t0.1993\t\t0.322\t\t33\n",
+      "9:\t0.7143\t\t0.1661\t\t0.326\t\t49\n",
+      "10:\t0.6341\t\t0.1953\t\t0.241\t\t41\n",
+      "11:\t0.7297\t\t0.1748\t\t0.189\t\t74\n",
+      "12:\t0.7581\t\t0.1782\t\t0.233\t\t62\n",
+      "13:\t0.44\t\t0.2104\t\t0.378\t\t25\n",
+      "14:\t0.5909\t\t0.207\t\t0.216\t\t44\n",
+      "15:\t0.8372\t\t0.1771\t\t0.509\t\t43\n",
+      "16:\t0.6923\t\t0.2157\t\t0.308\t\t26\n",
       "17:\tObject has not detected. Not enough matches are found - 16/20\n",
-      "18:\t0.7372\t\t0.1616\t\t109.874\t\t156\n",
-      "19:\t0.3333\t\t0.1956\t\t146.472\t\t39\n",
-      "20:\t0.2903\t\t0.1882\t\t171.534\t\t31\n",
-      "21:\t0.3333\t\t0.2281\t\t136.848\t\t21\n",
-      "22:\t0.5429\t\t0.1819\t\t144.558\t\t35\n",
-      "23:\t0.5\t\t0.2089\t\t140.705\t\t30\n",
-      "24:\t0.6111\t\t0.1951\t\t136.83\t\t54\n",
-      "25:\t0.6739\t\t0.1907\t\t117.575\t\t46\n",
-      "26:\t0.7381\t\t0.2161\t\t136.85\t\t42\n",
-      "27:\t0.5909\t\t0.1978\t\t138.803\t\t22\n",
-      "28:\t0.6\t\t0.1834\t\t146.477\t\t55\n",
-      "29:\t0.5172\t\t0.2177\t\t173.411\t\t29\n",
-      "30:\t0.5\t\t0.2258\t\t94.467\t\t28\n",
-      "31:\t0.4091\t\t0.2149\t\t152.27\t\t22\n",
+      "18:\t0.7372\t\t0.1616\t\t0.393\t\t156\n",
+      "19:\t0.3333\t\t0.1956\t\t0.509\t\t39\n",
+      "20:\t0.2903\t\t0.1882\t\t0.478\t\t31\n",
+      "21:\t0.3333\t\t0.2281\t\t0.478\t\t21\n",
+      "22:\t0.5429\t\t0.1819\t\t0.393\t\t35\n",
+      "23:\t0.5\t\t0.2089\t\t0.386\t\t30\n",
+      "24:\t0.6111\t\t0.1951\t\t0.332\t\t54\n",
+      "25:\t0.6739\t\t0.1907\t\t0.332\t\t46\n",
+      "26:\t0.7381\t\t0.2161\t\t0.355\t\t42\n",
+      "27:\t0.5909\t\t0.1978\t\t0.393\t\t22\n",
+      "28:\t0.6\t\t0.1834\t\t0.524\t\t55\n",
+      "29:\t0.5172\t\t0.2177\t\t0.509\t\t29\n",
+      "30:\t0.5\t\t0.2258\t\t0.278\t\t28\n",
+      "31:\t0.4091\t\t0.2149\t\t0.401\t\t22\n",
       "32:\tObject has not detected. Not enough matches are found - 17/20\n",
-      "33:\t0.3182\t\t0.1822\t\t140.713\t\t22\n",
+      "33:\t0.3182\t\t0.1822\t\t0.385\t\t22\n",
       "34:\tObject has not detected. Not enough matches are found - 13/20\n",
       "35:\tObject has not detected. Not enough matches are found - 16/20\n",
-      "36:\t0.44\t\t0.2436\t\t158.048\t\t25\n",
-      "37:\t0.5\t\t0.2606\t\t155.171\t\t24\n",
-      "38:\t0.4375\t\t0.3595\t\t94.473\t\t32\n",
-      "39:\t0.6071\t\t0.3627\t\t71.343\t\t84\n",
+      "36:\t0.44\t\t0.2436\t\t0.401\t\t25\n",
+      "37:\t0.5\t\t0.2606\t\t0.401\t\t24\n",
+      "38:\t0.4375\t\t0.3595\t\t0.2\t\t32\n",
+      "39:\t0.6071\t\t0.3627\t\t0.154\t\t84\n",
       "40:\tObject has not detected. Not enough matches are found - 7/20\n",
       "41:\tObject has not detected. Not enough matches are found - 5/20\n",
-      "42:\t0.2857\t\t0.2184\t\t163.859\t\t21\n",
+      "42:\t0.2857\t\t0.2184\t\t0.578\t\t21\n",
       "43:\tObject has not detected. Not enough matches are found - 15/20\n",
       "44:\tObject has not detected. Not enough matches are found - 15/20\n",
       "45:\tObject has not detected. Not enough matches are found - 13/20\n",
-      "46:\t0.5714\t\t0.2037\t\t132.995\t\t28\n",
-      "47:\t0.6486\t\t0.1963\t\t152.268\t\t37\n",
-      "48:\t0.3462\t\t0.2153\t\t165.732\t\t26\n",
+      "46:\t0.5714\t\t0.2037\t\t0.316\t\t28\n",
+      "47:\t0.6486\t\t0.1963\t\t0.316\t\t37\n",
+      "48:\t0.3462\t\t0.2153\t\t0.439\t\t26\n",
       "49:\tObject has not detected. Not enough matches are found - 12/20\n",
-      "50:\t0.625\t\t0.2306\t\t131.07\t\t24\n",
-      "51:\t0.6296\t\t0.1988\t\t115.65\t\t27\n",
+      "50:\t0.625\t\t0.2306\t\t0.308\t\t24\n",
+      "51:\t0.6296\t\t0.1988\t\t0.362\t\t27\n",
       "52:\tObject has not detected. Not enough matches are found - 15/20\n",
       "53:\tObject has not detected. Not enough matches are found - 9/20\n",
       "54:\tObject has not detected. Not enough matches are found - 8/20\n",
-      "55:\t0.5238\t\t0.2099\t\t358.517\t\t21\n",
-      "56:\t0.6296\t\t0.1704\t\t389.329\t\t54\n",
-      "57:\t0.6038\t\t0.1958\t\t351.579\t\t53\n",
-      "58:\t0.6571\t\t0.2346\t\t352.685\t\t35\n",
+      "55:\t0.5238\t\t0.2099\t\t0.335\t\t21\n",
+      "56:\t0.6296\t\t0.1704\t\t0.353\t\t54\n",
+      "57:\t0.6038\t\t0.1958\t\t0.33\t\t53\n",
+      "58:\t0.6571\t\t0.2346\t\t0.326\t\t35\n",
       "59:\tObject has not detected. Not enough matches are found - 15/20\n",
-      "60:\t0.4\t\t0.2454\t\t142.659\t\t20\n",
-      "61:\t0.6571\t\t0.1897\t\t283.329\t\t35\n",
-      "62:\t0.8065\t\t0.1949\t\t370.043\t\t31\n",
+      "60:\t0.4\t\t0.2454\t\t0.386\t\t20\n",
+      "61:\t0.6571\t\t0.1897\t\t0.247\t\t35\n",
+      "62:\t0.8065\t\t0.1949\t\t0.362\t\t31\n",
       "63:\tObject has not detected. Not enough matches are found - 16/20\n",
-      "64:\t0.5909\t\t0.1937\t\t148.41\t\t44\n",
-      "65:\t0.7\t\t0.185\t\t148.397\t\t30\n",
-      "66:\t0.5926\t\t0.2012\t\t158.051\t\t54\n",
-      "67:\t0.7963\t\t0.1837\t\t148.412\t\t54\n",
-      "68:\t0.6\t\t0.2116\t\t273.639\t\t20\n",
-      "69:\t0.6176\t\t0.1753\t\t164.791\t\t68\n",
-      "70:\t0.4222\t\t0.2331\t\t100.254\t\t45\n",
-      "71:\t0.2826\t\t0.2366\t\t167.706\t\t46\n",
-      "72:\t0.4545\t\t0.249\t\t102.145\t\t33\n",
-      "73:\t0.3235\t\t0.2377\t\t125.312\t\t34\n",
-      "74:\t0.4828\t\t0.279\t\t106.033\t\t87\n",
-      "75:\t0.4348\t\t0.2247\t\t100.25\t\t23\n",
-      "76:\t0.5072\t\t0.1817\t\t113.749\t\t69\n",
-      "77:\t0.3429\t\t0.2309\t\t127.208\t\t35\n",
-      "78:\t0.6667\t\t0.2084\t\t119.528\t\t27\n",
-      "79:\t0.375\t\t0.2243\t\t129.132\t\t40\n",
-      "80:\t0.5526\t\t0.2183\t\t113.716\t\t38\n",
-      "81:\t0.6857\t\t0.2\t\t134.893\t\t35\n",
-      "82:\t0.6667\t\t0.2065\t\t148.411\t\t48\n",
-      "83:\t0.6716\t\t0.1736\t\t159.022\t\t67\n",
+      "64:\t0.5909\t\t0.1937\t\t0.455\t\t44\n",
+      "65:\t0.7\t\t0.185\t\t0.432\t\t30\n",
+      "66:\t0.5926\t\t0.2012\t\t0.409\t\t54\n",
+      "67:\t0.7963\t\t0.1837\t\t0.455\t\t54\n",
+      "68:\t0.6\t\t0.2116\t\t0.241\t\t20\n",
+      "69:\t0.6176\t\t0.1753\t\t0.401\t\t68\n",
+      "70:\t0.4222\t\t0.2331\t\t0.208\t\t45\n",
+      "71:\t0.2826\t\t0.2366\t\t0.478\t\t46\n",
+      "72:\t0.4545\t\t0.249\t\t0.247\t\t33\n",
+      "73:\t0.3235\t\t0.2377\t\t0.362\t\t34\n",
+      "74:\t0.4828\t\t0.279\t\t0.208\t\t87\n",
+      "75:\t0.4348\t\t0.2247\t\t0.216\t\t23\n",
+      "76:\t0.5072\t\t0.1817\t\t0.254\t\t69\n",
+      "77:\t0.3429\t\t0.2309\t\t0.347\t\t35\n",
+      "78:\t0.6667\t\t0.2084\t\t0.27\t\t27\n",
+      "79:\t0.375\t\t0.2243\t\t0.386\t\t40\n",
+      "80:\t0.5526\t\t0.2183\t\t0.362\t\t38\n",
+      "81:\t0.6857\t\t0.2\t\t0.355\t\t35\n",
+      "82:\t0.6667\t\t0.2065\t\t0.386\t\t48\n",
+      "83:\t0.6716\t\t0.1736\t\t0.432\t\t67\n",
       "84:\tObject has not detected. Not enough matches are found - 19/20\n",
-      "85:\t0.6129\t\t0.1965\t\t131.033\t\t31\n",
-      "86:\t0.6207\t\t0.2408\t\t132.992\t\t29\n",
-      "87:\t0.5\t\t0.2339\t\t100.229\t\t22\n",
-      "88:\t0.375\t\t0.3198\t\t119.528\t\t32\n",
-      "89:\t0.5238\t\t0.2421\t\t142.621\t\t21\n",
-      "90:\t0.625\t\t0.2188\t\t127.233\t\t24\n",
-      "91:\t0.5405\t\t0.2115\t\t136.849\t\t37\n",
-      "92:\t0.6957\t\t0.2154\t\t86.737\t\t23\n",
-      "93:\t0.4231\t\t0.1646\t\t79.057\t\t26\n",
-      "94:\t0.3871\t\t0.1911\t\t96.383\t\t31\n",
-      "95:\t0.3913\t\t0.2447\t\t97.345\t\t23\n",
-      "96:\t0.3636\t\t0.293\t\t127.151\t\t22\n",
-      "97:\t0.5185\t\t0.2061\t\t115.672\t\t27\n",
-      "98:\t0.5484\t\t0.1935\t\t104.08\t\t31\n",
-      "99:\t0.5217\t\t0.2053\t\t152.256\t\t23\n",
+      "85:\t0.6129\t\t0.1965\t\t0.308\t\t31\n",
+      "86:\t0.6207\t\t0.2408\t\t0.316\t\t29\n",
+      "87:\t0.5\t\t0.2339\t\t0.278\t\t22\n",
+      "88:\t0.375\t\t0.3198\t\t0.254\t\t32\n",
+      "89:\t0.5238\t\t0.2421\t\t0.308\t\t21\n",
+      "90:\t0.625\t\t0.2188\t\t0.262\t\t24\n",
+      "91:\t0.5405\t\t0.2115\t\t0.278\t\t37\n",
+      "92:\t0.6957\t\t0.2154\t\t0.285\t\t23\n",
+      "93:\t0.4231\t\t0.1646\t\t0.247\t\t26\n",
+      "94:\t0.3871\t\t0.1911\t\t0.324\t\t31\n",
+      "95:\t0.3913\t\t0.2447\t\t0.247\t\t23\n",
+      "96:\t0.3636\t\t0.293\t\t0.301\t\t22\n",
+      "97:\t0.5185\t\t0.2061\t\t0.293\t\t27\n",
+      "98:\t0.5484\t\t0.1935\t\t0.278\t\t31\n",
+      "99:\t0.5217\t\t0.2053\t\t0.393\t\t23\n",
       "100:\tObject has not detected. Not enough matches are found - 19/20\n",
-      "101:\t0.5185\t\t0.1942\t\t129.136\t\t27\n",
-      "102:\t0.4615\t\t0.2333\t\t117.575\t\t26\n",
+      "101:\t0.5185\t\t0.1942\t\t0.324\t\t27\n",
+      "102:\t0.4615\t\t0.2333\t\t0.293\t\t26\n",
       "103:\tObject has not detected. Not enough matches are found - 9/20\n",
       "104:\tObject has not detected. Not enough matches are found - 7/20\n",
       "105:\tObject has not detected. Not enough matches are found - 8/20\n",
@@ -149,14 +149,14 @@
       "Average:\n",
       "1 metric: 0.5513964705882353\n",
       "2 metric: 0.2135694117647059\n",
-      "3 metric: 167.22274117647055\n"
+      "3 metric: 0.34834117647058804\n"
      ]
     }
    ],
    "source": [
     "#Код, який рахує метрики\n",
     "\n",
-    "printImages = True\n",
+    "printImages = False\n",
     "\n",
     "ametric1 = 0\n",
     "ametric2 = 0\n",
@@ -206,9 +206,10 @@
     "            if mask[j][0] == 1:\n",
     "                corect+=1\n",
     "                sum += good[j].distance\n",
-    "        metric1 = round(corect / len(mask), 4)\n",
-    "        metric2 = round(sum / corect, 4)\n",
-    "        metric3 = round((time.time() - start_time)*10**9/(img.shape[0] * img.shape[1]), 3)\n",
+    "        metric1 = round(corect / len(mask), 4)#1 метрика: відносна кількість правильно суміщених ознак\n",
+    "        metric2 = round(sum / corect, 4)#2 метрика: похибка локалізації, рахую як середнє значення distance об'єкту DMatch,\n",
+    "                                            #в тих випадках, коли ознака суміщена правильно.\n",
+    "        metric3 = round((time.time() - start_time)*10**6/(img2.shape[0] * img2.shape[1]),3)#3 метрика: секунд на 1 мегапіксель\n",
     "        print(f\"{1+i}:\\t{metric1}\\t\\t{metric2}\\t\\t{metric3}\\t\\t{len(good)}\")\n",
     "        ametric1 += metric1\n",
     "        ametric2 += metric2\n",
@@ -217,13 +218,10 @@
     "    else:\n",
     "        print (f\"{1+i}:\\tObject has not detected. Not enough matches are found - {len(good)}/{MIN_MATCH_COUNT}\")\n",
     "        matchesMask = None\n",
-    "    start_time = time.time()\n",
-    "    draw_params = dict(matchColor = (0,255,0), # draw matches in green color\n",
-    "                   singlePointColor = None,\n",
-    "                   matchesMask = matchesMask, # draw only inliers\n",
-    "                   flags = 2)\n",
+    "\n",
     "    \n",
     "    if(printImages):\n",
+    "        draw_params = dict(matchColor = (0,255,0), singlePointColor = None, matchesMask = matchesMask, flags = 2)\n",
     "        img3 = cv2.drawMatches(img1,kp1,img2,kp2,good,None,**draw_params)\n",
     "\n",
     "        cv2.imshow(\"Matching result\", img3)\n",
