--- a/Lab2_CV.ipynb
+++ b/Lab2_CV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -26,109 +26,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "image\t1 metric\t2 metric\t3 metric\tgood matches\n",
-      "1:\t0.7021\t\t0.2128\t\t0.501\t\t47\n",
-      "2:\t0.6897\t\t0.2109\t\t0.47\t\t29\n",
-      "3:\t0.7358\t\t0.1877\t\t0.416\t\t53\n",
-      "4:\t0.5405\t\t0.1727\t\t0.385\t\t37\n",
-      "5:\t0.625\t\t0.2168\t\t0.378\t\t40\n",
-      "6:\t0.3182\t\t0.2443\t\t0.401\t\t22\n",
-      "7:\t0.6452\t\t0.2072\t\t0.291\t\t31\n",
-      "8:\t0.7576\t\t0.1993\t\t0.293\t\t33\n",
-      "9:\t0.7143\t\t0.1661\t\t0.274\t\t49\n",
-      "10:\t0.6341\t\t0.1953\t\t0.222\t\t41\n",
-      "11:\t0.7297\t\t0.1748\t\t0.208\t\t74\n",
-      "12:\t0.7581\t\t0.1782\t\t0.191\t\t62\n",
-      "13:\t0.44\t\t0.2104\t\t0.349\t\t25\n",
-      "14:\t0.5909\t\t0.207\t\t0.212\t\t44\n",
-      "15:\t0.8372\t\t0.1771\t\t0.507\t\t43\n",
-      "16:\t0.6923\t\t0.2157\t\t0.26\t\t26\n",
+      "image\t1 metric\t2 metric\tsize\t\t time\t\tgood matches\n",
+      "1:\t0.7021\t\t0.2128\t\t129792\t\t0.049\t\t47\n",
+      "2:\t0.6897\t\t0.2109\t\t129792\t\t0.056\t\t29\n",
+      "3:\t0.7358\t\t0.1877\t\t129792\t\t0.051\t\t53\n",
+      "4:\t0.5405\t\t0.1727\t\t129792\t\t0.0455\t\t37\n",
+      "5:\t0.625\t\t0.2168\t\t129792\t\t0.049\t\t40\n",
+      "6:\t0.3182\t\t0.2443\t\t129792\t\t0.0365\t\t22\n",
+      "7:\t0.6452\t\t0.2072\t\t519168\t\t0.1491\t\t31\n",
+      "8:\t0.7576\t\t0.1993\t\t519168\t\t0.1486\t\t33\n",
+      "9:\t0.7143\t\t0.1661\t\t519168\t\t0.1531\t\t49\n",
+      "10:\t0.6341\t\t0.1953\t\t519168\t\t0.1131\t\t41\n",
+      "11:\t0.7297\t\t0.1748\t\t519168\t\t0.1106\t\t74\n",
+      "12:\t0.7581\t\t0.1782\t\t519168\t\t0.1171\t\t62\n",
+      "13:\t0.44\t\t0.2104\t\t519168\t\t0.1926\t\t25\n",
+      "14:\t0.5909\t\t0.207\t\t519168\t\t0.1221\t\t44\n",
+      "15:\t0.8372\t\t0.1771\t\t519168\t\t0.2492\t\t43\n",
+      "16:\t0.6923\t\t0.2157\t\t519168\t\t0.1291\t\t26\n",
       "17:\tObject has not detected. Not enough matches are found - 16/19\n",
-      "18:\t0.7372\t\t0.1616\t\t0.316\t\t156\n",
-      "19:\t0.3333\t\t0.1956\t\t0.393\t\t39\n",
-      "20:\t0.2903\t\t0.1882\t\t0.432\t\t31\n",
-      "21:\t0.3333\t\t0.2281\t\t0.386\t\t21\n",
-      "22:\t0.5429\t\t0.1819\t\t0.339\t\t35\n",
-      "23:\t0.5\t\t0.2089\t\t0.332\t\t30\n",
-      "24:\t0.6111\t\t0.1951\t\t0.324\t\t54\n",
-      "25:\t0.6739\t\t0.1907\t\t0.316\t\t46\n",
-      "26:\t0.7381\t\t0.2161\t\t0.393\t\t42\n",
-      "27:\t0.5909\t\t0.1978\t\t0.37\t\t22\n",
-      "28:\t0.6\t\t0.1834\t\t0.447\t\t55\n",
-      "29:\t0.5172\t\t0.2177\t\t0.493\t\t29\n",
-      "30:\t0.5\t\t0.2258\t\t0.27\t\t28\n",
-      "31:\t0.4091\t\t0.2149\t\t0.393\t\t22\n",
+      "18:\t0.7372\t\t0.1616\t\t129792\t\t0.0385\t\t156\n",
+      "19:\t0.3333\t\t0.1956\t\t129792\t\t0.039\t\t39\n",
+      "20:\t0.2903\t\t0.1882\t\t129792\t\t0.0345\t\t31\n",
+      "21:\t0.3333\t\t0.2281\t\t129792\t\t0.0365\t\t21\n",
+      "22:\t0.5429\t\t0.1819\t\t129792\t\t0.043\t\t35\n",
+      "23:\t0.5\t\t0.2089\t\t129792\t\t0.0435\t\t30\n",
+      "24:\t0.6111\t\t0.1951\t\t129792\t\t0.04\t\t54\n",
+      "25:\t0.6739\t\t0.1907\t\t129792\t\t0.036\t\t46\n",
+      "26:\t0.7381\t\t0.2161\t\t129792\t\t0.045\t\t42\n",
+      "27:\t0.5909\t\t0.1978\t\t129792\t\t0.0435\t\t22\n",
+      "28:\t0.6\t\t0.1834\t\t129792\t\t0.051\t\t55\n",
+      "29:\t0.5172\t\t0.2177\t\t129792\t\t0.0555\t\t29\n",
+      "30:\t0.5\t\t0.2258\t\t129792\t\t0.0295\t\t28\n",
+      "31:\t0.4091\t\t0.2149\t\t129792\t\t0.035\t\t22\n",
       "32:\tObject has not detected. Not enough matches are found - 17/19\n",
-      "33:\t0.3182\t\t0.1822\t\t0.362\t\t22\n",
+      "33:\t0.3182\t\t0.1822\t\t129792\t\t0.0265\t\t22\n",
       "34:\tObject has not detected. Not enough matches are found - 13/19\n",
       "35:\tObject has not detected. Not enough matches are found - 16/19\n",
-      "36:\t0.44\t\t0.2436\t\t0.355\t\t25\n",
-      "37:\t0.5\t\t0.2606\t\t0.355\t\t24\n",
-      "38:\t0.4375\t\t0.3595\t\t0.17\t\t32\n",
-      "39:\t0.6071\t\t0.3627\t\t0.154\t\t84\n",
+      "36:\t0.44\t\t0.2436\t\t129792\t\t0.04\t\t25\n",
+      "37:\t0.5\t\t0.2606\t\t129792\t\t0.0515\t\t24\n",
+      "38:\t0.4375\t\t0.3595\t\t129792\t\t0.0215\t\t32\n",
+      "39:\t0.6071\t\t0.3627\t\t129792\t\t0.0175\t\t84\n",
       "40:\tObject has not detected. Not enough matches are found - 7/19\n",
       "41:\tObject has not detected. Not enough matches are found - 5/19\n",
-      "42:\t0.2857\t\t0.2184\t\t0.455\t\t21\n",
+      "42:\t0.2857\t\t0.2184\t\t129792\t\t0.0345\t\t21\n",
       "43:\tObject has not detected. Not enough matches are found - 15/19\n",
       "44:\tObject has not detected. Not enough matches are found - 15/19\n",
       "45:\tObject has not detected. Not enough matches are found - 13/19\n",
-      "46:\t0.5714\t\t0.2037\t\t0.316\t\t28\n",
-      "47:\t0.6486\t\t0.1963\t\t0.324\t\t37\n",
-      "48:\t0.3462\t\t0.2153\t\t0.463\t\t26\n",
+      "46:\t0.5714\t\t0.2037\t\t129792\t\t0.038\t\t28\n",
+      "47:\t0.6486\t\t0.1963\t\t129792\t\t0.0405\t\t37\n",
+      "48:\t0.3462\t\t0.2153\t\t129792\t\t0.039\t\t26\n",
       "49:\tObject has not detected. Not enough matches are found - 12/19\n",
-      "50:\t0.625\t\t0.2306\t\t0.347\t\t24\n",
-      "51:\t0.6296\t\t0.1988\t\t0.378\t\t27\n",
+      "50:\t0.625\t\t0.2306\t\t129792\t\t0.0395\t\t24\n",
+      "51:\t0.6296\t\t0.1988\t\t129792\t\t0.0465\t\t27\n",
       "52:\tObject has not detected. Not enough matches are found - 15/19\n",
       "53:\tObject has not detected. Not enough matches are found - 9/19\n",
       "54:\tObject has not detected. Not enough matches are found - 8/19\n",
-      "55:\t0.5238\t\t0.2099\t\t0.335\t\t21\n",
-      "56:\t0.6296\t\t0.1704\t\t0.337\t\t54\n",
-      "57:\t0.6038\t\t0.1958\t\t0.287\t\t53\n",
-      "58:\t0.6571\t\t0.2346\t\t0.318\t\t35\n",
+      "55:\t0.5238\t\t0.2099\t\t519168\t\t0.1806\t\t21\n",
+      "56:\t0.6296\t\t0.1704\t\t519168\t\t0.1786\t\t54\n",
+      "57:\t0.6038\t\t0.1958\t\t519168\t\t0.1576\t\t53\n",
+      "58:\t0.6571\t\t0.2346\t\t519168\t\t0.1726\t\t35\n",
       "59:\tObject has not detected. Not enough matches are found - 15/19\n",
-      "60:\t0.4\t\t0.2454\t\t0.416\t\t20\n",
-      "61:\t0.6571\t\t0.1897\t\t0.235\t\t35\n",
-      "62:\t0.8065\t\t0.1949\t\t0.364\t\t31\n",
+      "60:\t0.4\t\t0.2454\t\t129792\t\t0.0485\t\t20\n",
+      "61:\t0.6571\t\t0.1897\t\t519168\t\t0.1301\t\t35\n",
+      "62:\t0.8065\t\t0.1949\t\t519168\t\t0.1951\t\t31\n",
       "63:\tObject has not detected. Not enough matches are found - 16/19\n",
-      "64:\t0.5909\t\t0.1937\t\t0.478\t\t44\n",
-      "65:\t0.7\t\t0.185\t\t0.439\t\t30\n",
-      "66:\t0.5926\t\t0.2012\t\t0.386\t\t54\n",
-      "67:\t0.7963\t\t0.1837\t\t0.517\t\t54\n",
-      "68:\t0.6\t\t0.2116\t\t0.252\t\t20\n",
-      "69:\t0.6176\t\t0.1753\t\t0.432\t\t68\n",
-      "70:\t0.4222\t\t0.2331\t\t0.239\t\t45\n",
-      "71:\t0.2826\t\t0.2366\t\t0.47\t\t46\n",
-      "72:\t0.4545\t\t0.249\t\t0.239\t\t33\n",
-      "73:\t0.3235\t\t0.2377\t\t0.385\t\t34\n",
-      "74:\t0.4828\t\t0.279\t\t0.224\t\t87\n",
-      "75:\t0.4348\t\t0.2247\t\t0.224\t\t23\n",
-      "76:\t0.5072\t\t0.1817\t\t0.254\t\t69\n",
-      "77:\t0.3429\t\t0.2309\t\t0.316\t\t35\n",
-      "78:\t0.6667\t\t0.2084\t\t0.278\t\t27\n",
-      "79:\t0.375\t\t0.2243\t\t0.424\t\t40\n",
-      "80:\t0.5526\t\t0.2183\t\t0.339\t\t38\n",
-      "81:\t0.6857\t\t0.2\t\t0.355\t\t35\n",
-      "82:\t0.6667\t\t0.2065\t\t0.308\t\t48\n",
-      "83:\t0.6716\t\t0.1736\t\t0.401\t\t67\n",
-      "84:\t0.6316\t\t0.2308\t\t0.278\t\t19\n",
-      "85:\t0.6129\t\t0.1965\t\t0.308\t\t31\n",
-      "86:\t0.6207\t\t0.2408\t\t0.278\t\t29\n",
-      "87:\t0.5\t\t0.2339\t\t0.239\t\t22\n",
-      "88:\t0.375\t\t0.3198\t\t0.262\t\t32\n",
-      "89:\t0.5238\t\t0.2421\t\t0.339\t\t21\n",
-      "90:\t0.625\t\t0.2188\t\t0.27\t\t24\n",
-      "91:\t0.5405\t\t0.2115\t\t0.231\t\t37\n",
-      "92:\t0.6957\t\t0.2154\t\t0.308\t\t23\n",
-      "93:\t0.4231\t\t0.1646\t\t0.262\t\t26\n",
-      "94:\t0.3871\t\t0.1911\t\t0.355\t\t31\n",
-      "95:\t0.3913\t\t0.2447\t\t0.278\t\t23\n",
-      "96:\t0.3636\t\t0.293\t\t0.27\t\t22\n",
-      "97:\t0.5185\t\t0.2061\t\t0.316\t\t27\n",
-      "98:\t0.5484\t\t0.1935\t\t0.301\t\t31\n",
-      "99:\t0.5217\t\t0.2053\t\t0.432\t\t23\n",
-      "100:\t0.5263\t\t0.1987\t\t0.339\t\t19\n",
-      "101:\t0.5185\t\t0.1942\t\t0.308\t\t27\n",
-      "102:\t0.4615\t\t0.2333\t\t0.301\t\t26\n",
+      "64:\t0.5909\t\t0.1937\t\t129792\t\t0.0595\t\t44\n",
+      "65:\t0.7\t\t0.185\t\t129792\t\t0.053\t\t30\n",
+      "66:\t0.5926\t\t0.2012\t\t129792\t\t0.0525\t\t54\n",
+      "67:\t0.7963\t\t0.1837\t\t129792\t\t0.0625\t\t54\n",
+      "68:\t0.6\t\t0.2116\t\t519168\t\t0.1246\t\t20\n",
+      "69:\t0.6176\t\t0.1753\t\t129792\t\t0.055\t\t68\n",
+      "70:\t0.4222\t\t0.2331\t\t129792\t\t0.0265\t\t45\n",
+      "71:\t0.2826\t\t0.2366\t\t129792\t\t0.0305\t\t46\n",
+      "72:\t0.4545\t\t0.249\t\t129792\t\t0.025\t\t33\n",
+      "73:\t0.3235\t\t0.2377\t\t129792\t\t0.031\t\t34\n",
+      "74:\t0.4828\t\t0.279\t\t129792\t\t0.026\t\t87\n",
+      "75:\t0.4348\t\t0.2247\t\t129792\t\t0.027\t\t23\n",
+      "76:\t0.5072\t\t0.1817\t\t129792\t\t0.028\t\t69\n",
+      "77:\t0.3429\t\t0.2309\t\t129792\t\t0.028\t\t35\n",
+      "78:\t0.6667\t\t0.2084\t\t129792\t\t0.0345\t\t27\n",
+      "79:\t0.375\t\t0.2243\t\t129792\t\t0.0365\t\t40\n",
+      "80:\t0.5526\t\t0.2183\t\t129792\t\t0.041\t\t38\n",
+      "81:\t0.6857\t\t0.2\t\t129792\t\t0.045\t\t35\n",
+      "82:\t0.6667\t\t0.2065\t\t129792\t\t0.049\t\t48\n",
+      "83:\t0.6716\t\t0.1736\t\t129792\t\t0.0585\t\t67\n",
+      "84:\t0.6316\t\t0.2308\t\t129792\t\t0.035\t\t19\n",
+      "85:\t0.6129\t\t0.1965\t\t129792\t\t0.0385\t\t31\n",
+      "86:\t0.6207\t\t0.2408\t\t129792\t\t0.0385\t\t29\n",
+      "87:\t0.5\t\t0.2339\t\t129792\t\t0.0315\t\t22\n",
+      "88:\t0.375\t\t0.3198\t\t129792\t\t0.0225\t\t32\n",
+      "89:\t0.5238\t\t0.2421\t\t129792\t\t0.04\t\t21\n",
+      "90:\t0.625\t\t0.2188\t\t129792\t\t0.0375\t\t24\n",
+      "91:\t0.5405\t\t0.2115\t\t129792\t\t0.031\t\t37\n",
+      "92:\t0.6957\t\t0.2154\t\t129792\t\t0.038\t\t23\n",
+      "93:\t0.4231\t\t0.1646\t\t129792\t\t0.0315\t\t26\n",
+      "94:\t0.3871\t\t0.1911\t\t129792\t\t0.0375\t\t31\n",
+      "95:\t0.3913\t\t0.2447\t\t129792\t\t0.0255\t\t23\n",
+      "96:\t0.3636\t\t0.293\t\t129792\t\t0.028\t\t22\n",
+      "97:\t0.5185\t\t0.2061\t\t129792\t\t0.0365\t\t27\n",
+      "98:\t0.5484\t\t0.1935\t\t129792\t\t0.037\t\t31\n",
+      "99:\t0.5217\t\t0.2053\t\t129792\t\t0.0515\t\t23\n",
+      "100:\t0.5263\t\t0.1987\t\t129792\t\t0.0455\t\t19\n",
+      "101:\t0.5185\t\t0.1942\t\t129792\t\t0.0395\t\t27\n",
+      "102:\t0.4615\t\t0.2333\t\t129792\t\t0.0385\t\t26\n",
       "103:\tObject has not detected. Not enough matches are found - 9/19\n",
       "104:\tObject has not detected. Not enough matches are found - 7/19\n",
       "105:\tObject has not detected. Not enough matches are found - 8/19\n",
@@ -150,9 +150,9 @@
       "Average:\n",
       "1 metric: 0.5520298850574712\n",
       "2 metric: 0.21359655172413797\n",
-      "3 metric: 0.3352643678160918\n",
+      "3 metric: 0.11312528735632182\n",
       "true detection: 85.29411764705883%\n",
-      "true no detection: 1.0%\n"
+      "true no detection: 100.0%\n"
      ]
     }
    ],
@@ -169,15 +169,15 @@
     "ametric2 = 0\n",
     "ametric3 = 0\n",
     "ndetected = 0\n",
-    "print(\"image\\t1 metric\\t2 metric\\t3 metric\\tgood matches\")\n",
-    "csv_columns = ['Image', 'Matches', 'MeanDist', 'Time/Size']\n",
+    "print(\"image\\t1 metric\\t2 metric\\tsize\\t\\t time\\t\\tgood matches\")\n",
+    "csv_columns = ['Matches', 'MeanDist', 'Size', 'Time']\n",
     "results = []\n",
     "\n",
     "trueDetected = 0\n",
     "falseDetected = 0\n",
     "\n",
     "img1 = cv2.imread(QUERY_IMAGE, cv2.IMREAD_GRAYSCALE)\n",
-    "#img1 = cv2.resize(img1, (0,0), fx=0.5, fy=0.5) \n",
+    "#img1 = cv2.resize(img1, (0,0), fx=0.1, fy=0.1) \n",
     "\n",
     "surf = cv2.xfeatures2d.SURF_create()\n",
     "kp1, des1 = surf.detectAndCompute(img1, None)\n",
@@ -199,6 +199,11 @@
     "        for m,n in matches:\n",
     "            if m.distance < 0.75*n.distance:\n",
     "                good.append(m)\n",
+    "                \n",
+    "                \n",
+    "    Time = round(time.time() - start_time, 4) #3 метрика: секунд\n",
+    "    Size = img2.shape[0] * img2.shape[1]        # пікселів\n",
+    "    ametric3 += Time\n",
     "    \n",
     "    if (len(good)>=MIN_MATCH_COUNT):\n",
     "        src_pts = np.float32([ kp1[m.queryIdx].pt for m in good ]).reshape(-1,1,2)\n",
@@ -222,11 +227,10 @@
     "        metric1 = round(corect / len(mask), 4)#1 метрика: відносна кількість правильно суміщених ознак\n",
     "        metric2 = round(sum / corect, 4)#2 метрика: похибка локалізації, рахую як середнє значення distance об'єкту DMatch,\n",
     "                                            #в тих випадках, коли ознака суміщена правильно.\n",
-    "        metric3 = round((time.time() - start_time)*10**6/(img2.shape[0] * img2.shape[1]),3)#3 метрика: секунд на 1 мегапіксель\n",
-    "        print(f\"{i}:\\t{metric1}\\t\\t{metric2}\\t\\t{metric3}\\t\\t{len(good)}\")\n",
+    "        print(f\"{i}:\\t{metric1}\\t\\t{metric2}\\t\\t{Size}\\t\\t{Time}\\t\\t{len(good)}\")\n",
     "        ametric1 += metric1\n",
     "        ametric2 += metric2\n",
-    "        ametric3 += metric3\n",
+    "        \n",
     "        \n",
     "        ndetected += 1\n",
     "        if(i <= imgWithObj):\n",
@@ -236,7 +240,9 @@
     "    else:\n",
     "        print (f\"{i}:\\tObject has not detected. Not enough matches are found - {len(good)}/{MIN_MATCH_COUNT}\")\n",
     "        matchesMask = None\n",
-    "\n",
+    "        metric1 = None\n",
+    "        metric2 = None\n",
+    "    #metric3 = round((time.time() - start_time)*10**6/(img2.shape[0] * img2.shape[1]),3)#3 метрика: секунд на 1 мегапіксель\n",
     "    \n",
     "    if(viewImages):\n",
     "        draw_params = dict(matchColor = (0,255,0), singlePointColor = None, matchesMask = matchesMask, flags = 2)\n",
@@ -245,12 +251,12 @@
     "        cv2.imshow(\"Matching result\", img3)\n",
     "        cv2.waitKey(0)\n",
     "        cv2.destroyAllWindows()\n",
-    "    data = {'Image': i, 'Matches': metric1, 'MeanDist': metric2, 'Time/Size': metric3}\n",
+    "    data = {'Matches': metric1, 'MeanDist': metric2, 'Size': Size, 'Time': Time}\n",
     "\n",
     "    results.append(data)\n",
     "print(f\"Average:\\n1 metric: {ametric1/ndetected}\\n2 metric: {ametric2/ndetected}\\n3 metric: {ametric3/ndetected}\")\n",
     "print(f\"true detection: {trueDetected/imgWithObj*100}%\")\n",
-    "print(f\"true no detection: {(imgWithoutObj-falseDetected*100)/imgWithoutObj}%\")\n",
+    "print(f\"true no detection: {((imgWithoutObj-falseDetected)*100)/imgWithoutObj}%\")\n",
     "\n",
     "if(writeCSV):\n",
     "    try:\n",
@@ -264,30 +270,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not enough matches are found - 20/26\n"
+      "Not enough matches are found - 10/550\n"
      ]
     }
    ],
    "source": [
     "#Код для обробки конкретного зображення\n",
     "\n",
-    "Image = \"img2/98.jpg\"\n",
+    "Image = \"img2/114.jpg\"\n",
     "\n",
     "img1 = cv2.imread(QUERY_IMAGE, cv2.IMREAD_GRAYSCALE)\n",
-    "#img1 = cv2.resize(img1, (0,0), fx=0.1, fy=0.1) \n",
+    "img1 = cv2.resize(img1, (0,0), fx=0.1, fy=0.1) \n",
     "\n",
     "surf = cv2.xfeatures2d.SURF_create()\n",
     "kp1, des1 = surf.detectAndCompute(img1, None)\n",
     "\n",
     "img2 = cv2.imread(Image, cv2.IMREAD_GRAYSCALE)\n",
-    "img2 = cv2.resize(img2, (0,0), fx=0.9, fy=0.9)\n",
+    "img2 = cv2.resize(img2, (0,0), fx=0.2, fy=0.2)\n",
     "kp2, des2 = surf.detectAndCompute(img2, None)\n",
     "bf = cv2.BFMatcher()\n",
     "matches = bf.knnMatch(des1, des2, k=2)\n",
